각 이미지 제목과 설명 스타일 변수 생성

--- a/public/style/var.scss
+++ b/public/style/var.scss
@@ -15,8 +15,12 @@ $nav-item-border-radius: 50%;
 $small-img-size-width: 12.5rem;
 $small-img-size-height: 12.5rem;
 $small-img-padding: 0 1.5rem;
-$small-title-line-height: 0;
-$smail-desc-font-size: 0.7rem;
+$small-img-title-font-size: 0.9rem;
+$small-img-title-font-weight: bold;
+$small-img-p-font-size: 0.7rem;
+$small-img-font-overflow: hidden;
+$small-img-font-text-overflow: ellipsis;
+$small-img-font-white-space: nowrap;
 $show-more-btn-background-color: #E9E9E9;
 $arrow-size: 3rem;
 $slide-movement-length: 35rem;
