--- a/views/parts/sectionTop.ejs
+++ b/views/parts/sectionTop.ejs
@@ -8,7 +8,9 @@
         <button><i class="fas fa-angle-left"></i></button>
       </div>
       <div class="main-top-slide-imgs">
-        <!-- 이미지를 동적으로 불러온다 (LoadItem.js 파일 참조)-->
+        <div class="main-top-slide-container">
+          <!-- 이미지를 동적으로 불러온다 (LoadItem.js 파일 참조)-->
+        </div>
       </div>
       <div class="arrow-btn arrow-btn-right">
         <button><i class="fas fa-angle-right"></i></button>
