--- a/shopping/public/stylesheets/main.scss
+++ b/shopping/public/stylesheets/main.scss
@@ -13,6 +13,8 @@ $icon_url : url(https://shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/n
 $icon2_url : url(https://shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/img_home_150131.png);
 $icon_size : 130px 90px;
 $nav_font_size : 16px;
+$item_list_size : 200px;
+
 
 * {
     border : 1px solid red;
@@ -208,5 +210,28 @@ button, input {
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+
+    padding: 0 10%;
 }
+
+.big_contents {
+    display: flex;
+    flex-direction: row;
+
+}
+
+.small_contents {
+    display: flex;
+    flex-direction: column;
+
+    .item_list {
+        display: flex;
+        flex-direction: row;
+
+        .item_list_img {
+            width: $item_list_size;
+            height: $item_list_size;
+        }
+    }
+}
+
