Add : Minor Add
* js 파일 삽입
* 슬라이드 버튼 추가
* 더보기 버튼 추가

--- a/shopping/views/main.ejs
+++ b/shopping/views/main.ejs
@@ -63,18 +63,20 @@
       <div class = "main_wrapper">
         <div class = "big_contents">
             <div class = "best">
-
+                베스트 이미지
             </div>
+            <button class = "prev_button"></button>
             <div class = "slide_content">
-                
+                슬라이드 이미지
             </div>
+            <button class = "next_button"></button>
         </div>
 
         <div class = "small_contents">
             <ul class = "item_list">
 
             </ul>
-            <button class = "show_more"></button>
+            <button class = "show_more">더보기</button>
         </div>
 
 
@@ -91,6 +93,8 @@
     </section>
     <script src="/javascripts/header.js"></script>
     <script src="/javascripts/best.js"></script>
+    <script src="/javascripts/bigSlide.js"></script>
+    <script src="/javascripts/itemList.js"></script>
 </body>
 
 </html>
