[DOCS]Add morebutton

--- a/shopping/public/stylesheets/main/main.css
+++ b/shopping/public/stylesheets/main/main.css
@@ -74,3 +74,8 @@
 .transitiondefault {
   transition-duration: 300ms;
   transform: translate3d(0px, 0px, 0px); }
+
+.more_contents {
+  background-color: #ccc;
+  height: 54px;
+  width: 971px; }
