--- a/shopping/views/index.ejs
+++ b/shopping/views/index.ejs
@@ -128,6 +128,7 @@
           </span>
         </li>
       </ul> 
+      <button class = "more_contents">더보기</button>
     </div>
   </section>
   <section class="hotDeal_section"></section>
