--- a/shopping/public/stylesheets/sass/main/main.sass
+++ b/shopping/public/stylesheets/sass/main/main.sass
@@ -76,3 +76,7 @@
     transition-duration: 300ms
     transform: translate3d(0px,0px,0px)
 
+.more_contents
+    background-color: #ccc
+    height: 54px
+    width: 971px
