--- a/shopping/public/stylesheets/style.css
+++ b/shopping/public/stylesheets/style.css
@@ -231,6 +231,11 @@ header {
   transition-duration: 300ms;
   transform: translate3d(0px, 0px, 0px); }
 
+.more_contents {
+  background-color: #ccc;
+  height: 54px;
+  width: 971px; }
+
 body {
   height: 500vh;
   background-color: #f3f3f3;
