--- a/public/scss/banner.scss
+++ b/public/scss/banner.scss
@@ -12,6 +12,11 @@
         #logo_shw{
             width: 119px;
             height: auto;
+        }   
+        #logo_shw:hover{
+            transform: translate3d(100px, 0, 0) skew(45deg) rotate(23deg);
+            width:100px;
+            transition-duration: 1s;
         }
     }
     .wrap_shwsearch{
