--- a/src/scss/var.scss
+++ b/src/scss/var.scss
@@ -8,3 +8,4 @@ $evt-card-item-img-w: 200px;
 $evt-card-item-img-h: 200px;
 
 $ic-url: url(https://shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/img_home_190702.png);
+$ic-url2: url(https://shop1.daumcdn.net/search/cdn/simage/shopping/img/ico_comm2_150514.gif);
