--- a/raccoon-shopping-express/front/style.scss
+++ b/raccoon-shopping-express/front/style.scss
@@ -621,15 +621,16 @@ section {
                 height: 100%;
                 overflow: hidden;
                 display: inline-block;
-                transform: translate3d(0px, 0px, 0px);
-                width: 1280px;
+                transform: translate3d(10px, 0px, 0px);
+                width: 4000px;
 
                 .list--item {
                   overflow: hidden;
-                  width: 1275px;
+                  width: 4000px;
                   background-color: #fff;
 
                   li {
+                    display: inline-block;
                     padding: 21px 27px;
                     height: 276px;
                     border-bottom: 0 none;
@@ -641,16 +642,17 @@ section {
                     border-right: 1px solid #f1f1f1;
                     line-height: 14px;
                     letter-spacing: -1px;
+                    list-style: none;
                   }
 
-                  .first {
-                    padding-right: 27px;
-                    width: 201px;
-                  }
+                  // .first {
+                  //   padding-right: 27px;
+                  //   width: 201px;
+                  // }
 
-                  .last {
-                    padding-right: 26px;
-                  }
+                  // .last {
+                  //   padding-right: 26px;
+                  // }
 
                   .link--product {
                     display: block;
