--- a/views/index.ejs
+++ b/views/index.ejs
@@ -196,72 +196,72 @@
         <div class="theme__title"> 지금뜨는 테마 카테고리</div>
         <section class="item theme">
             <div class="item__zone theme__zone">
-                <div class="item__box">
-                    <div class="item__box-img">
-                        <img src="/images/itemImg.jpeg">
-                    </div>
-                    <div class="item__box-title">
-                        <span><%= homeContents.contents[0].eventContent.subtitle %></span>
-                    </div>
-                    <div class="item__box-subtitle">
-                        <span><%= homeContents.contents[0].eventContent.title %></span>
-                    </div>
-                    <div class="item__box-label">테마</div>
-                </div>
-                <div class="item__box">
-                    <div class="item__box-img">
-                        <img src="/images/itemImg.jpeg">
-                    </div>
-                    <div class="item__box-title">
-                        <span><%= homeContents.contents[0].eventContent.subtitle %></span>
-                    </div>
-                    <div class="item__box-subtitle">
-                        <span><%= homeContents.contents[0].eventContent.title %></span>
-    
-                    </div>
-                    <div class="item__box-label">테마</div>
-                </div>
-                <div class="item__box">
-                    <div class="item__box-img">
-                        <img src="/images/itemImg.jpeg">
-                    </div>
-                    <div class="item__box-title">
-                        <span><%= homeContents.contents[0].eventContent.subtitle %></span>
-                    </div>
-                    <div class="item__box-subtitle">
-                        <span><%= homeContents.contents[0].eventContent.title %></span>
-    
-                    </div>
-                    <div class="item__box-label">테마</div>
-                </div>
-                <div class="item__box">
-                    <div class="item__box-img">
-                        <img src="/images/itemImg.jpeg">
-                    </div>
-                    <div class="item__box-title">
-                        <span><%= homeContents.contents[0].eventContent.subtitle %></span>
-                    </div>
-                    <div class="item__box-subtitle">
-                        <span><%= homeContents.contents[0].eventContent.title %></span>
-    
-                    </div>
-                    <div class="item__box-label">테마</div>
-                </div>
-                <div class="item__box">
-                    <div class="item__box-img">
-                        <img src="/images/itemImg.jpeg">
-                    </div>
-                    <div class="item__box-title">
-                        <span><%= homeContents.contents[0].eventContent.subtitle %></span>
-                    </div>
-                    <div class="item__box-subtitle">
-                        <span><%= homeContents.contents[0].eventContent.title %></span>
-    
-                    </div>
-                    <div class="item__box-label">테마</div>
-                </div>
                 <div class="prev-btn">
                     <span class="i-prevbtn2"></span>
+                </div>
+                <div class="item__box">
+                    <div class="item__box-img">
+                        <img src="/images/itemImg.jpeg">
+                    </div>
+                    <div class="item__box-title">
+                        <span><%= homeContents.contents[0].eventContent.subtitle %></span>
+                    </div>
+                    <div class="item__box-subtitle">
+                        <span><%= homeContents.contents[0].eventContent.title %></span>
+                    </div>
+                    <div class="item__box-label">테마</div>
+                </div>
+                <div class="item__box">
+                    <div class="item__box-img">
+                        <img src="/images/itemImg.jpeg">
+                    </div>
+                    <div class="item__box-title">
+                        <span><%= homeContents.contents[0].eventContent.subtitle %></span>
+                    </div>
+                    <div class="item__box-subtitle">
+                        <span><%= homeContents.contents[0].eventContent.title %></span>
+    
+                    </div>
+                    <div class="item__box-label">테마</div>
+                </div>
+                <div class="item__box">
+                    <div class="item__box-img">
+                        <img src="/images/itemImg.jpeg">
+                    </div>
+                    <div class="item__box-title">
+                        <span><%= homeContents.contents[0].eventContent.subtitle %></span>
+                    </div>
+                    <div class="item__box-subtitle">
+                        <span><%= homeContents.contents[0].eventContent.title %></span>
+    
+                    </div>
+                    <div class="item__box-label">테마</div>
+                </div>
+                <div class="item__box">
+                    <div class="item__box-img">
+                        <img src="/images/itemImg.jpeg">
+                    </div>
+                    <div class="item__box-title">
+                        <span><%= homeContents.contents[0].eventContent.subtitle %></span>
+                    </div>
+                    <div class="item__box-subtitle">
+                        <span><%= homeContents.contents[0].eventContent.title %></span>
+    
+                    </div>
+                    <div class="item__box-label">테마</div>
+                </div>
+                <div class="item__box">
+                    <div class="item__box-img">
+                        <img src="/images/itemImg.jpeg">
+                    </div>
+                    <div class="item__box-title">
+                        <span><%= homeContents.contents[0].eventContent.subtitle %></span>
+                    </div>
+                    <div class="item__box-subtitle">
+                        <span><%= homeContents.contents[0].eventContent.title %></span>
+    
+                    </div>
+                    <div class="item__box-label">테마</div>
                 </div>
                 <div class="next-btn">
                     <span class="i-nextbtn2"></span>
@@ -277,6 +277,6 @@
         </section>
     </main>
 
-    
+    <script type="module" src="/js/main.js"></script>
 </body>
 </html>
