--- a/public/css/icon.css
+++ b/public/css/icon.css
@@ -1,10 +1,14 @@
 .icon, .i-search, .i-category, .i-user, .i-cart, .i-down-arrow {
-  background: url("/images/fe-w3-icon.png") no-repeat;
+  background: url("/images/icon1.png") no-repeat;
   background-size: 130px 90px;
   display: block; }
 
-.icon2, .i-prevbtn, .i-nextbtn, .i-prevbtn2, .i-nextbtn2 {
-  background: url("/images/fe-w3-icon2.png") no-repeat;
+.icon2, .i-prevbtn, .i-nextbtn, .i-prevbtn2, .i-nextbtn2, .i-themebtn {
+  background: url("/images/icon2.png") no-repeat;
+  display: block; }
+
+.icon3 {
+  background: url("/images/icon3.png") no-repeat;
   display: block; }
 
 .wh-23, .i-search {
@@ -15,7 +19,7 @@
   width: 28px;
   height: 28px; }
 
-.wh-45, .i-prevbtn2, .i-nextbtn2 {
+.wh-45, .i-prevbtn2, .i-nextbtn2, .i-themebtn {
   width: 45px;
   height: 45px; }
 
@@ -53,4 +57,7 @@
   background-position: 1px -55px; }
 
 .i-nextbtn2 {
+  background-position: -50px -55px; }
+
+.i-themebtn {
   background-position: -50px -55px; }
