--- a/views/index.ejs
+++ b/views/index.ejs
@@ -94,20 +94,20 @@
                     <div class="content__main__carousel">
                         <div class="slide">
                             <div
-                                class="item"
-                                style="transform: translate3d(0%, 0, 0); transition: transform 0.4s;"
+                                class="item"                                
+                                style="transform: translateX(0%); transition: transform 0.4s;"
                             >
                                 <img src="/images/coffee_twig.png" />
                             </div>
                             <div
                                 class="item"
-                                style="transform: translate3d(100%, 0, 0); transition: transform 0.4s;"
+                                style="transform: translateX(100%); transition: transform 0.4s;"
                             >
                                 <img src="/images/carousel_test1.jfif" />
                             </div>
                             <div
                                 class="item"
-                                style="transform: translate3d(-100%, 0, 0); transition: transform 0.4s;"
+                                style="transform: translateX(-100%); transition: transform 0.4s;"
                             >
                                 <img src="/images/carousel_test2.png" />
                             </div>
