[Update] Refactor public/javascripts
- transition을 클래스로 넣고 빼는 형식으로 바꿨는데 그냥 인라인으로 해도 될것같은 너낌스..
- 전반적으로 리팩토링을 함
- 폴더 수정
    - setters: html에다가 넣어주거나 캐러셀 만드는 애들
    - apis: api, urls.. 그런애들

--- a/shopping/public/stylesheets/main.scss
+++ b/shopping/public/stylesheets/main.scss
@@ -20,6 +20,10 @@ footer {
   display: none;
 }
 
+.transition {
+  transition: 300ms;
+}
+
 .main__article {
   width: 100%;
   background-color: #fff;
