--- a/shopping_how/public/stylesheets/style.css
+++ b/shopping_how/public/stylesheets/style.css
@@ -30,6 +30,18 @@ li {
   visibility: hidden;
   /* opacity: 0 */ }
 
+.search-icon, .menu-icon, .login-icon, .recent-icon, .arrow-icon {
+  position: absolute;
+  background-size: 130px 90px;
+  background-image: url("/images/icon.png"); }
+
+.icon-slide-prev, .icon-slide-next {
+  background-image: url("/images/icon_arrow.png");
+  font-size: 0;
+  line-height: 0;
+  width: 23px;
+  height: 45px; }
+
 /*-------------------------------*/
 /*HEADER*/
 /*-------------------------------*/
@@ -169,9 +181,7 @@ header {
   font-size: 0;
   line-height: 0;
   text-indent: -9999px;
-  background-image: url("/images/icon.png");
   background-repeat: no-repeat;
-  background-size: 130px 90px;
   position: absolute;
   left: 14px;
   top: 15px;
@@ -184,9 +194,7 @@ header {
   font-size: 0;
   line-height: 0;
   text-indent: -9999px;
-  background-image: url("/images/icon.png");
   background-repeat: no-repeat;
-  background-size: 130px 90px;
   position: absolute;
   left: -15px;
   background-position: 0 -30px;
@@ -208,9 +216,7 @@ header {
   font-size: 0;
   line-height: 0;
   text-indent: -9999px;
-  background-image: url("/images/icon.png");
   background-repeat: no-repeat;
-  background-size: 130px 90px;
   position: absolute;
   left: -4px;
   background-position: -30px -30px;
@@ -224,9 +230,7 @@ header {
   font-size: 0;
   line-height: 0;
   text-indent: -9999px;
-  background-image: url("/images/icon.png");
   background-repeat: no-repeat;
-  background-size: 130px 90px;
   position: absolute;
   left: -4px;
   background-position: -60px -30px;
@@ -240,9 +244,7 @@ header {
   font-size: 0;
   line-height: 0;
   text-indent: -9999px;
-  background-image: url("/images/icon.png");
   background-repeat: no-repeat;
-  background-size: 130px 90px;
   position: absolute;
   right: 17px;
   top: 8px;
@@ -330,6 +332,64 @@ header {
     background-position: 0 -850px;
     background-image: url("/images/icon_theme.png");
     background-repeat: no-repeat; }
+
+.carousel1 {
+  display: flex;
+  flex-direction: row; }
+  .carousel1 .carousel__btn-container {
+    width: 125px;
+    display: absolute; }
+    .carousel1 .carousel__btn-container button {
+      position: relative;
+      border: 1px solid red;
+      top: 130px;
+      width: 63px;
+      height: 85px;
+      vertical-align: middle;
+      background-color: transparent; }
+  .carousel1 .slide-window {
+    overflow: hidden;
+    width: 514px;
+    height: 340px;
+    margin: 0 auto;
+    position: relative; }
+
+.icon-slide-prev {
+  display: block;
+  overflow: hidden;
+  font-size: 0;
+  line-height: 0;
+  text-indent: -9999px;
+  background-repeat: no-repeat;
+  position: absolute;
+  background-position: 0 0;
+  top: 5px;
+  left: 30px; }
+  .icon-slide-prev:hover {
+    background-position: -60px 0; }
+
+.icon-slide-next {
+  display: block;
+  overflow: hidden;
+  font-size: 0;
+  line-height: 0;
+  text-indent: -9999px;
+  background-repeat: no-repeat;
+  position: absolute;
+  background-position: -30px 0;
+  top: 5px;
+  right: 30px; }
+  .icon-slide-next:hover {
+    background-position: -90px 0; }
+
+.slide {
+  position: relative;
+  height: 340px;
+  width: 1470px;
+  left: -484px; }
+  .slide .panel {
+    display: inline-block;
+    width: 484px; }
 
 .btn_more_info {
   height: 100%;
